2005-08-09  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* ext/mad/gstmad.c: (gst_mad_init), (gst_mad_chain):
	  It'd be nice if I could listen to my mp3 files, so send out an
	  initial discont, as the sink apparently wants.

2005-08-09  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* gst/avi/gstavidemux.c: (gst_avi_demux_handle_src_event),
	(gst_avi_demux_handle_seek):
	  Fix seeking (or, well, fix threading issue where a variable was
	  set before a lock was taken and was already unset before that
	  same lock was taken and was thus no longer in existance when it
	  actually had to be used).

2005-08-09  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* gst/avi/gstavidemux.c: (gst_avi_demux_process_next_entry):
	  Mixing binary and logical operators is not going to work; fix
	  position-querying in Totem.

2005-08-08  Tim-Philipp Müller  <tim at centricular dot net>

	* ext/faad/gstfaad.c: (gst_faad_base_init), (gst_faad_class_init),
	(gst_faad_init), (gst_faad_setcaps), (gst_faad_srcgetcaps),
	(gst_faad_event), (gst_faad_update_caps), (gst_faad_chain),
	(gst_faad_change_state):
	* ext/faad/gstfaad.h:
	  Fix negotiation (#310932) and miscellaneous other stuff. Probably
	  still needs some more work.

2005-08-08  Tim-Philipp Müller  <tim at centricular dot net>

	* ext/jpeg/gstjpegdec.c: (gst_jpeg_dec_init),
	(gst_jpeg_dec_setcaps), (gst_jpeg_dec_chain):
	  Add setcaps() function (for mjpeg).

2005-08-08  Andy Wingo  <wingo@pobox.com>

	* ext/esd/esdsink.c (gst_esdsink_getcaps): Seems that wierd
	va_list caps setting function was borked. Fixed esdsink.

	* sys/oss/gstosssink.c (gst_oss_sink_open, gst_oss_sink_close) 
	(gst_oss_sink_prepare, gst_oss_sink_unprepare): Update for newer
	audiosink api.

	* ext/raw1394/gstdv1394src.c (gst_dv1394src_get_property) 
	(gst_dv1394src_set_property): Style. All about the style.

	* ext/esd/esdsink.c (gst_esdsink_getcaps): Return specific caps
	only if in READY or higher (i.e., if _open() has been called.)